fixes on qml files and settings for qml calamares

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -16,10 +16,10 @@ sequence:
 
 - show:
   - welcomeq
-  - locale
-  - keyboard
+  - localeq
+  - keyboardq
   - partition
-  - users
+  - usersq
   - summary
   
 - exec:
