--- a/etc/calamares/modules/welcome.conf
+++ b/etc/calamares/modules/welcome.conf
@@ -1,25 +1,27 @@
+# Configuration for the welcome module. The welcome page
+# displays some information from the branding file.
+# Which parts it displays can be configured through
+# the show* variables.
+#
+# In addition to displaying the welcome page, this module
+# can check requirements for installation.
 ---
+# Setting for QML loading
+qmlSearch: both
+# Display settings for various buttons on the welcome page.
+# The URLs themselves come from branding.desc is the setting
+# here is "true". If the setting is false, the button is hidden.
+# The setting can also be a full URL which will then be used
+# instead of the one from the branding file, or empty or not-set
+# which will hide the button.
 showSupportUrl:         true
 showKnownIssuesUrl:     true
-showReleaseNotesUrl:    false
-showDonateUrl:  https://nxos.org/#sponsor
+showReleaseNotesUrl:    true
 
-requirements:
-    requiredStorage:    4.7
-    requiredRam:        1.0
-    internetCheckUrl:	https://nxos.org/
-
-    check:
-        - storage
-        - ram
-        - power
-        - internet
-        - root
-    required:
-        - root
-        - storage
-        - ram
-geoip:
-    style:  "json"
-    url:    "https://ipapi.co/json"
-    selector: "country"
+# If this Url is set to something non-empty, a "donate"
+# button is added to the welcome page alongside the
+# others (see settings, above). Clicking the button opens
+# the corresponding link. (This button has no corresponding
+# branding.desc string)
+#
+# showDonateUrl:  https://kde.org/community/donations/
