--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -15,12 +15,12 @@ instances:
 sequence:
 
 - show:
+  - partitionq
   - welcomeq
   - localeq
   - keyboardq
   - plasmalnfq
   - usersq
-  - partition
   - summary
 
 - exec:
