Added the exec steps

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -94,8 +94,26 @@ sequence:
   - partitionq
   - summaryq
 
+- exec:
+  - partitionq
+  - mount
+  - unpackfs
+  - machineid
+  - fstab
+  - localeq
+  - keyboardq
+  - localecfg
+  - luksbootkeyfile
+  - usersq
+  - displaymanager
+  - networkcfg
+  - hwclock
+  - initramfs
+ # - bootloader
+  - packages
+  - umount
+
 - show:
-#  - webview@owncloud
   - finished
 
 # A branding component is a directory, either in SHARE/calamares/branding or
