add the missing finsihed qml file

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -114,7 +114,7 @@ sequence:
   - umount
 
 - show:
-  - finished
+  - finishedq
 
 # A branding component is a directory, either in SHARE/calamares/branding or
 # in /etc/calamares/branding (the latter takes precedence). The directory must
