--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ branches:
   only:
   - master
   - development
-  - qml
+  - qml-calamares
 deploy:
 - provider: script
   script: "./source/nomad-repository-util.sh upload nomad-desktop *.deb"
   skip_cleanup: true
   on:
-    branch: qml
+    branch: qml-calamares
 notifications:
   email: false
   slack:
