--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ script:
 branches:
   only:
   - master
-  - development
   - qml-calamares
 deploy:
 - provider: script
-  script: "./source/nomad-repository-util.sh upload nomad-desktop *.deb"
+  script: ./source/nitrux-repository-util.sh *.deb
   skip_cleanup: true
   on:
     branch: qml-calamares
