--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Vcs-Git: https://github.com/Nitrux/calamares-settings-nitrux.git
 Package: calamares-qml-settings-nitrux
 Architecture: any
 Replaces: calamares-settings-nxos
-Depends: ${shlibs:Depends}, ${misc:Depends}, calamares
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: ${shlibs:Depends}, ${misc:Depends}, calamares-qml
+Description: Settings for Calamares QMl.
+ Nitrux branding package and settings for the Calamares QML installer.
