update responsive template and simplified the plasmalnf settings for only dakr and light nitrux styles

--- a/etc/calamares/modules/plasmalnfq.conf
+++ b/etc/calamares/modules/plasmalnfq.conf
@@ -48,23 +48,18 @@ lnftool:	"/usr/bin/lookandfeeltool"
 # a minimum of 120x80 pixels. This allows the screenshot to scale up
 # on HiDPI displays where the fonts are larger (in pixels).
 themes:
-    - org.kde.fuzzy-pig.desktop
-    - theme: org.kde.breeze.desktop
-      image: "unitypreview.svg"
-    - theme: org.kde.breezedark.desktop
-      image: "gnomepreview.svg"
+
     - theme: org.kde.nitrux.desktop
       image: "modernpreview.svg"
-    - theme: org.kde.breezedark.desktop
+    - theme: org.kde.nitrux.dark.desktop
       image: "material-shellpreview.svg"
-    - org.kde.fluffy-bunny.desktop
 
 # If *showAll* is true, then all installed themes are shown in the
 # UI for selection, even if they are not listed in *themes*. This
 # allows selection of all themes even while not all of them are
 # listed in *themes* -- which is useful to show screenshots for those
 # you do have a screenshot for.
-showAll: true
+showAll: false
 
 # You can pre-select one of the themes; it is not applied
 # immediately, but its radio-button is switched on to indicate
