--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -94,9 +94,30 @@ sequence:
   - partitionq
   - summaryq
 
+- exec:
+  - partitionq
+  - mount
+  - unpackfs
+  - machineid
+  - fstab
+  - localeq
+  - keyboardq
+  - localecfg
+  - luksbootkeyfile
+  - usersq
+  - displaymanager
+  - networkcfg
+  - hwclock
+  - initramfscfg
+  - initramfs
+  - contextualprocess@before_bootloader
+  - grubcfg
+  - bootloader
+  - packages
+  - umount
+
 - show:
-#  - webview@owncloud
-  - finished
+  - finishedq
 
 # A branding component is a directory, either in SHARE/calamares/branding or
 # in /etc/calamares/branding (the latter takes precedence). The directory must
