add back contextual and shellprocess moduels exec steps and add the finishedq conf file

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -57,10 +57,19 @@ modules-search: [ local ]
 # during install.
 #
 # YAML: list of maps of string:string key-value pairs.
-#instances:
-#- id:       owncloud
-#  module:   webview
-#  config:   owncloud.conf
+instances:
+- id:       bug-LP#1829805
+  module:   shellprocess
+  config:   shellprocess.conf
+
+- id:     before_bootloader
+  module:   contextualprocess
+  config:   contextualprocess.conf
+
+- id:     after_bootloader
+  module:   contextualprocess
+  config:   contextualprocess.conf
+
 
 # Sequence section. This section describes the sequence of modules, both
 # viewmodules and jobmodules, as they should appear and/or run.
@@ -90,6 +99,7 @@ sequence:
   - localeq
   - keyboardq
   - usersq
+  - plasmalnfq
   - partitionq
   - summaryq
 
@@ -109,11 +119,11 @@ sequence:
   - hwclock
   - initramfscfg
   - initramfs
-  #- contextualprocess@before_bootloader
+  - contextualprocess@before_bootloader
   - grubcfg
   - bootloader
-  #- contextualprocess@after_bootloader
-  #- shellprocess@bug-LP#1829805
+  - contextualprocess@after_bootloader
+  - shellprocess@bug-LP#1829805
   - packages
 
 - show:
