--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 branches:
   only:
   - master
+  - qml-calamares
 deploy:
 - provider: script
   script: ./source/nitrux-repository-util.sh *.deb
