[ci skip] add chnages from lubuntu

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -62,14 +62,17 @@ instances:
   module:   shellprocess
   config:   shellprocess.conf
 
-- id:     before_bootloader
+- id:       before_bootloader
   module:   contextualprocess
   config:   contextualprocess.conf
 
-- id:     after_bootloader
+- id:       after_bootloader
   module:   contextualprocess
   config:   contextualprocess.conf
 
+- id:       before_bootloader_mkdirs
+  module:   contextualprocess
+  config:   before_bootloader_mkdirs_context.conf
 
 # Sequence section. This section describes the sequence of modules, both
 # viewmodules and jobmodules, as they should appear and/or run.
@@ -98,9 +101,8 @@ sequence:
   - welcomeq
   - localeq
   - keyboardq
-  - usersq
-  - plasmalnfq
   - partitionq
+  - usersq
   - summaryq
 
 - exec:
@@ -117,14 +119,16 @@ sequence:
   - displaymanager
   - networkcfg
   - hwclock
+  - contextualprocess@before_bootloader_mkdirs
+  - shellprocess@bug-LP#1829805
   - initramfscfg
   - initramfs
-  - contextualprocess@before_bootloader
   - grubcfg
+  - contextualprocess@before_bootloader
   - bootloader
   - contextualprocess@after_bootloader
-  - shellprocess@bug-LP#1829805
   - packages
+  - umount
 
 - show:
   - finishedq
@@ -149,7 +153,7 @@ branding: nxos
 # this is not explicitly set.
 #
 # YAML: boolean.
-prompt-install: false
+prompt-install: true
 
 # If this is set to true, Calamares will execute all target environment
 # commands in the current environment, without chroot. This setting should
@@ -169,7 +173,7 @@ dont-chroot: false
 # If this is set to true, Calamares refers to itself as a "setup program"
 # rather than an "installer". Defaults to the value of dont-chroot, but
 # Calamares will complain if this is not explicitly set.
-# oem-setup: true
+oem-setup: false
 
 # If this is set to true, the "Cancel" button will be disabled entirely.
 # The button is also hidden from view.
