[ci skip] typoi in file name

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -64,12 +64,11 @@ instances:
 
 - id:       before_bootloader
   module:   contextualprocess
-  config:   contextualprocess.conf
+  config:   before_bootloader_context.conf
 
 - id:       after_bootloader
   module:   contextualprocess
-  config:   contextualprocess.conf
-
+  config:   after_bootloader_context.conf
 - id:       before_bootloader_mkdirs
   module:   contextualprocess
   config:   before_bootloader_mkdirs_context.conf
