--- a/etc/calamares/modules/after_bootloader_context.conf
+++ b/etc/calamares/modules/after_bootloader_context.conf
@@ -7,3 +7,4 @@
 dontChroot: false
 timeout: 120
 firmwareType:
+    "*": "-for i in `ls @@ROOT@@/home/`; do rm @@ROOT@@/home/$i/Desktop/org.nxos.installer.desktop || exit 0; done"
