--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -60,7 +60,7 @@ modules-search: [ local ]
 instances:
 - id:       bug-LP#1829805
   module:   shellprocess
-  config:   shellprocess.conf
+  config:   shellprocess_bug-LP#1829805.conf
 
 - id:       before_bootloader
   module:   contextualprocess
