--- a/etc/calamares/modules/partitionq.conf
+++ b/etc/calamares/modules/partitionq.conf
@@ -3,7 +3,7 @@
 # distributions (Fedora, Debian, Manjaro, etc.) use /boot/efi, others (KaOS,
 # etc.) use just /boot.
 efiSystemPartition: "/boot/efi"
-enableLuksAutomatedPartitioning: true
+enableLuksAutomatedPartitioning: false
 userSwapChoices: none
 drawNestedPartitions: true
 defaultFileSystemType: "btrfs"
