--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -2,5 +2,6 @@ backend: apt
 
 operations:
   - remove:
-      - calamares
+      - calamares-qml
+      - calamares-qml-settings-nitrux
       - '^live-*'
