--- a/etc/calamares/modules/usersq.conf
+++ b/etc/calamares/modules/usersq.conf
@@ -4,12 +4,15 @@ setRootPassword: false
 sudoersGroup: sudo
 defaultGroups:
     - adm
+    - lp
     - cdrom
-    - dip
-    - lpadmin
-    - plugdev
-    - sambashare
     - sudo
+    - dip
+    - plugdev
+    - bluetooth
+    - netdev
+    - lpadmin
+    - sambashare
 passwordRequirements:
     minLength: 0
     maxLength: 0
