--- a/etc/calamares/modules/usersq.conf
+++ b/etc/calamares/modules/usersq.conf
@@ -4,14 +4,13 @@ setRootPassword: false
 sudoersGroup: sudo
 defaultGroups:
     - adm
-    - lp
     - cdrom
     - sudo
     - dip
     - plugdev
     - bluetooth
-    - netdev
     - lpadmin
+    - netdev
     - sambashare
 passwordRequirements:
     minLength: 0
@@ -19,3 +18,5 @@ passwordRequirements:
 # Explicitly set the shell instead of deferring to Calamares. We have a platform
 # expectation derived from Ubuntu here.
 userShell: /bin/zsh
+
+adm,cdrom,sudo,dip,plugdev,bluetooth,lpadmin,sambashare
