--- a/etc/calamares/modules/before_bootloader_context.conf
+++ b/etc/calamares/modules/before_bootloader_context.conf
@@ -2,10 +2,10 @@
 # Also pull in shim so secureboot has a chance at working.
 # Because of edge cases, we ignore BIOS, and do the same
 # procedure for all EFI types.
----
-firmwareType:
-    bios:    "-/bin/true"
-    "*":
+# ---
+# firmwareType:
+#    bios:    "-/bin/true"
+#    "*":
 #        -    command: apt-get update
 #             timeout: 120
 #        -    command: apt install -y --no-upgrade -o Acquire::gpgv::Options::=--ignore-time-conflict grub-efi-$(if grep -q 64 /sys/firmware/efi/fw_platform_size; then echo amd64-signed; else echo ia32; fi)
