--- a/etc/calamares/modules/users.conf
+++ b/etc/calamares/modules/users.conf
@@ -5,11 +5,12 @@ sudoersGroup: sudo
 defaultGroups:
     - adm
     - cdrom
-    - dip
-    - lpadmin
-    - plugdev
-    - sambashare
     - sudo
+    - dip
+    - plugdev
+    - bluetooth
+    - lpadmin
+    - sambashare
 passwordRequirements:
     minLength: 0
     maxLength: 0
