--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: calamares-settings-nitrux
 Section: kde
 Priority: optional
 Maintainer: Uri Herrera <uri_herrera@nxos.org>
-Build-Depends: debhelper (>=9)
+Build-Depends:
 Standards-Version: 3.9.6
 Homepage: https://nxos.org/
 Vcs-Git: https://github.com/Nitrux/calamares-settings-nitrux.git
