--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,18 @@ before_install:
 
 script:
   - sudo ./travis-build.sh
-  - package_cloud push nitrux/stable/debian/trixie *.deb
+  - package_cloud push nitrux/repo/debian/trixie *.deb
 
 branches:
   only:
     - master
-    - qml-calamares
 
 deploy:
   - provider: script
     script: wget -qO - https://raw.githubusercontent.com/Nitrux/nitrux-repository-util/master/upload-pkgs | sh -s *.deb
     skip_cleanup: true
     on:
-      branch: qml-calamares
+      branch: master
 
 notifications:
   email: false
